<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@+id/textView" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center" android:text="@string/register_form" android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textColor="#001AFF"/>
    <Space android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>
    <TextView android:id="@+id/textView3" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/first_name" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <EditText android:id="@+id/etFirstName" android:layout_width="match_parent" android:layout_height="wrap_content" android:ems="10" android:inputType="textPersonName" android:textAppearance="@style/TextAppearance.AppCompat.Large" tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />
    <TextView android:id="@+id/textView4" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/last_name" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <EditText android:id="@+id/etLastName" android:layout_width="match_parent" android:layout_height="wrap_content" android:ems="10" android:inputType="textPersonName" android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:autofillHints="" />
    <TextView android:id="@+id/textView5" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/email" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <EditText android:id="@+id/etRegisterEmail" android:layout_width="match_parent" android:layout_height="wrap_content" android:ems="10" android:inputType="textPersonName" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView android:id="@+id/textView7" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Phone No" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <EditText android:id="@+id/etRegisterPhone" android:layout_width="match_parent" android:layout_height="wrap_content" android:ems="10" android:inputType="textPersonName" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView android:id="@+id/textView6" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/password" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <EditText android:id="@+id/etRegisterPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:ems="10" android:inputType="textPassword" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <Space android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>
    <Button android:id="@+id/btnRegister" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/register" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView android:id="@+id/tvSwitchToLogin" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="right" android:linksClickable="true" android:text="@string/login" android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textColor="#052DF8"/>
    <Space android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="2"/>
</LinearLayout>